# cpcemu_palette_parser

./: Readme.md  cpcemu_public.h  test_unixd.sh  test_unixr.sh
cpcemu_parser/: Cargo.toml  build.rs  cpcemu_parser_bindings.h
cpcemu_parser/src/: action.rs  cpcemu.pest  lib.rs  parser.rs
fake_emulator/: main.c
